Neu

Communicator::Connect zum verbinden des Connectors

Authenticator::GeneratePrivatePublicKeyPair()

Authenticator::GenerateSignature()

Veränderungen zum Entwurf

AuthHandler::authenticate => AuthHandler::publickeyauthenticate zu ähnliche signatur mit der Passwort Autorization

Container:
Snapshot => CreateSnapshot // Typname darf kein Methodenname sein

18.01.2020 Docker, Container class Basic Implementation, Snapshot stub

Windows

gtest
cmake -Dgtest_force_shared_crt=1 .

QT5
-DQt5_DIR="C:\Qt\Qt5.14.0\5.14.0\msvc2017_64\lib\cmake\Qt5"