@@ -1,0 +1,3 @@
+cmake_minimum_required(VERSION 3.0)
+
+add_library(commandLineInterface CommandLineProcessor.cpp Task.cpp)
